--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Projeto final curso programacao",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
+    "start": "nodemon index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -19,6 +19,7 @@
   "homepage": "https://github.com/ProjetoMyLocker/My-Locker.git#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "morgan": "^1.10.0",
     "sequelize": "^6.3.5",
     "sqlite3": "^5.0.0"
   },
