--- a/config/config.json
+++ b/config/config.json
@@ -5,15 +5,15 @@
     "dialect": "sqlite"
   },
   "test": {
-    "username": "root",
-    "password": null,
+    "username": "",
+    "password": "",
     "database": "database_test",
     "host": "127.0.0.1",
     "dialect": "mysql"
   },
   "production": {
-    "username": "root",
-    "password": null,
+    "username": "",
+    "password": "",
     "database": "database_production",
     "host": "127.0.0.1",
     "dialect": "mysql"
